@@ -1,8 +1,9 @@
 linuxmuster-linbo (2.3.53-0) babo62; urgency=low
 
   * Fix #118: mount fallback.
+  * Fix #117: start.conf are found on the lokal storage.
 
- -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 14 Nov 2019 18:36:00 +0100
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 14 Nov 2019 21:02:21 +0100
 
 linuxmuster-linbo (2.3.52-0) babo62; urgency=low
 
